--- a/index.html
+++ b/index.html
@@ -19,30 +19,93 @@
     </section>
 
     <section class="main-content">
-      <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+      <h1>
+<a id="forge" class="anchor" href="#forge" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Forge</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>Forge is a live coding language for generating heavy metal music. It is based on <a href="https://github.com/tidalcycles/Tidal">Tidal</a> and built within <a href="https://github.com/samaaron/sonic-pi">Sonic Pi</a>.</p>
+
+<h2>
+<a id="to-use-forge" class="anchor" href="#to-use-forge" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>To use Forge</h2>
+
+<ol>
+<li><a href="http://sonic-pi.net/" title="Download Sonic Pi">Download and install Sonic Pi</a></li>
+<li>
+<a href="https://github.com/RusticFlare/Forge/archive/master.zip" title="Download Forge">Download the ZIP of this repository</a> and extract it into a suitable location</li>
+<li>Copy the contents of <a href="vendor/"><code>vendor/</code></a> into <code>PATH_TO/Sonic Pi/app/server/vendor/</code>
+</li>
+<li>Launch Sonic Pi</li>
+<li>Copy the contents of <a href="forge.rb"><code>forge.rb</code></a> into any Sonic Pi buffer</li>
+<li>Change <code>DIRECTORY = 'YOUR_PATH_HERE/forge'</code> on line 2 to the path of the folder you extracted in Step 2</li>
+<li>Run the buffer (<strong><em>This must be run every time Sonic Pi is opened</em></strong>)</li>
+<li>Get coding</li>
+</ol>
+
+<h2>
+<a id="forge-examples" class="anchor" href="#forge-examples" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Forge Examples</h2>
+
+<ul>
+<li>A simple repeating kick drum</li>
+</ul>
+
+<div class="highlight highlight-source-ruby"><pre>forge <span class="pl-c1">:drums</span>, <span class="pl-s"><span class="pl-pds">"</span>k<span class="pl-pds">"</span></span> <span class="pl-c"># :drums is the name of the live_loop created</span></pre></div>
+
+<ul>
+<li>A repeating kick then snare</li>
+</ul>
+
+<div class="highlight highlight-source-ruby"><pre>forge <span class="pl-c1">:drums</span>, <span class="pl-s"><span class="pl-pds">"</span>k s<span class="pl-pds">"</span></span> <span class="pl-c"># Listed items are played one after the other</span></pre></div>
+
+<ul>
+<li>A repeating kick and snare</li>
+</ul>
+
+<div class="highlight highlight-source-ruby"><pre>forge <span class="pl-c1">:drums</span>, <span class="pl-s"><span class="pl-pds">"</span>[k, s]<span class="pl-pds">"</span></span> <span class="pl-c"># Arrayed items are played simultaneously</span></pre></div>
+
+<ul>
+<li>These can be combined in anyway</li>
+</ul>
+
+<div class="highlight highlight-source-ruby"><pre>forge <span class="pl-c1">:drums</span>, <span class="pl-s"><span class="pl-pds">"</span>[k k k, cc] [s [s s]]<span class="pl-pds">"</span></span></pre></div>
+
+<ul>
+<li>
+<code>~</code> can be used for silence</li>
+</ul>
+
+<div class="highlight highlight-source-ruby"><pre>forge <span class="pl-c1">:drums</span>, <span class="pl-s"><span class="pl-pds">"</span>~<span class="pl-pds">"</span></span> <span class="pl-c"># This is an empty loop </span></pre></div>
+
+<ul>
+<li>You can define multiple loops</li>
+</ul>
+
+<div class="highlight highlight-source-ruby"><pre>forge <span class="pl-c1">:guitar</span>, <span class="pl-s"><span class="pl-pds">"</span>45 49 47 45<span class="pl-pds">"</span></span> <span class="pl-c"># Numbers refer to guitar notes</span>
+forge <span class="pl-c1">:drums</span>, <span class="pl-s"><span class="pl-pds">"</span>[k k,s]<span class="pl-pds">"</span></span></pre></div>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="additional-features" class="anchor" href="#additional-features" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Additional features</h3>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>Several shortcuts exist in Forge to make live-coding easier</p>
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<ul>
+<li>
+<code>*</code> can be used to repeat a sound. <code>"k*3"</code> is the same as <code>"k k k"</code>
+</li>
+<li>You can spread sounds over intervals using something of the form <code>"k(3,5)"</code> - here 3 kick drums are spread evenly over 5 beats, so it is equal to <code>"k ~ k ~ k"</code>
+</li>
+<li>
+<code>/</code> will cause a sound to last longer. For example in <code>"45/3"</code> the note will last 3 times longer than the note in <code>"45"</code>
+</li>
+<li>It is also possibe to define your own sounds in Sonic Pi and call them in Forge. This is done as a function that is evaluated in Forge:</li>
+</ul>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<div class="highlight highlight-source-ruby"><pre><span class="pl-c"># Define your sound as an argumentless function</span>
+define <span class="pl-c1">:a_chord</span> <span class="pl-k">do</span>
+  play <span class="pl-c1">45</span>
+  play <span class="pl-c1">47</span>
+  play <span class="pl-c1">50</span>
+<span class="pl-k">end</span>
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+forge <span class="pl-c1">:guitar</span>, <span class="pl-s"><span class="pl-pds">"</span>a_chord<span class="pl-pds">"</span></span> <span class="pl-c"># Call the function in Forge</span></pre></div>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/RusticFlare/Forge">Forge</a> is maintained by <a href="https://github.com/RusticFlare">RusticFlare</a>.</span>
