Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <p>Forge is a live coding language for generating heavy metal music. It is based on <a href="https://github.com/tidalcycles/Tidal">Tidal</a> and built within <a href="https://github.com/samaaron/sonic-pi">Sonic Pi</a>.</p>
 
 <h2>
-<a id="to-use-forge" class="anchor" href="#to-use-forge" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>To use Forge</h2>
+<a id="to-use-forge" class="anchor" href="#to-use-forge" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>To Use Forge</h2>
 
 <ol>
 <li>
